overflow fixed

--- a/components/components.array.css
+++ b/components/components.array.css
@@ -39,6 +39,8 @@
     top:10%;
     left: 8.33%;
     height: 80%;
+    background-color: black;
+    overflow: hidden;
 }
 
 #array-enteries{
